tests/diagnostics/error_unhandled_pipeline.rn
// `parseInt` yields a `ParseError!Int`; a bare pipeline leaves it unhandled.
echo "abc" | parseInt
